Nouvelle Affichage Acceuil et Episode, Ameloration MVC

--- a/Vue/Base_html/index.html
+++ b/Vue/Base_html/index.html
@@ -7,11 +7,9 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="style-front-end.css">
   </head>
   <body>
-    <div class="">
-
       <!-- nav -->
       <nav class="justify-content-center navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="col-12 col-md-10 col-lg-8 col-xl-6">
@@ -36,8 +34,6 @@
       </nav>
 
       <!-- Photo header-->
-      <div class="row">
-        <div class="col-12">
           <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -50,50 +46,71 @@
               </div>
             </div>
           </div>
-        </div>
-      </div>
 
       <!-- corp -->
-       <div class="row justify-content-center">
+       <div class="row no-gutters justify-content-center">
         <div class="col-12 col-md-10 col-lg-8 col-xl-6 py-5">
 
-          <div class="d-flex flex-column-reverse flex-sm-row justify-content-center align-items-center">
-            <div class="col-12 col-sm-9 text-center text-sm-left">
-              <h4>Une nouvelle facon de publié</h4>
-              <p>
-                Changement d'aire. Accedez directement en ligne à l'ouvre original<br>
-                Un nouveau modele économique, plus pratique et plus moderne
-              </p>
-            </div>
-            <div class="col-6 col-sm-3">
-              <img class="img-fluid p-5" alt="home_1" src="Photos/edit.png">
-            </div>
-          </div>
+          <article class="row no-gutters justify-content-center mb-4">
+            <h4 class="text-center">Preface</h4>
+            <p class="text-justify">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ut gravida mauris. Fusce quis ante vitae purus hendrerit sollicitudin. Integer ac mollis lectus. Curabitur tellus erat, pellentesque in dictum eget, tincidunt varius enim. Nam non fermentum nunc, et feugiat mauris. Ut porttitor dolor in lacus placerat, et dictum odio eleifend. Suspendisse justo justo, auctor nec sem eget, placerat varius risus. Sed ultricies dignissim molestie. Sed pellentesque auctor interdum. Morbi non pulvinar est. Cras a felis tincidunt, elementum purus nec, dapibus nisl. Maecenas sem odio, consequat ac egestas a, consectetur quis elit.
+            </p>
+            <p class="text-justify">
+              Nullam interdum rutrum ultrices. Phasellus fermentum, lorem eget pharetra dapibus, orci ligula consectetur massa, et volutpat dui quam non sem. Praesent non arcu eget sapien fermentum laoreet non quis libero. Nunc egestas est ac tempor fringilla. Ut erat nisl, accumsan non justo vitae, facilisis rhoncus massa. Sed eget commodo ex, a dapibus dui. Morbi quis massa non lacus tempor molestie sed vel sem. Etiam diam ipsum, rutrum a sapien ut, faucibus gravida diam. In et tristique odio. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce convallis pharetra metus, at ultricies neque consectetur vitae. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            </p>
+          </article>
+        </div>
+      </div>
 
-          <div class="d-flex flex-column flex-sm-row justify-content-center align-items-center">
-            <div class="col-6 col-sm-3">
-              <img class="img-fluid p-5" alt="home_2" src="Photos/information.png">
-            </div>
-            <div class="col-12 col-sm-9 text-center text-sm-right">
-              <h4>Restez Informé</h4>
-              <p>
-                Un projet édité sur la durée. Connectez-vous pour suivre la publication<br>
-                Suivez pas à pas chaque épisodes
-              </p>
-            </div>
-          </div>
+      <div class="row no-gutters justify-content-center bg-light">
+       <div class="col-12 col-md-10 col-lg-8 col-xl-6 py-5">
+         <h4 class="text-center">Derniers Chapitres</h4>
+         <div class="row">
+           <div class="col-12 col-sm-6 py-3">
 
-          <div class="d-flex flex-column-reverse flex-sm-row justify-content-center align-items-center">
-            <div class="col-12 col-sm-9 text-center text-sm-left">
-              <h4>Réagisez facilement</h4>
-              <p>Réagisez, débatez, intéragisez avec l'auteur et les autres lecteurs.</p>
-            </div>
-            <div class="col-6 col-sm-3">
-              <img class="img-fluid p-5" alt="home_3" src="Photos/chat.png">
-            </div>
+             <div class="card">
+               <div class="card-body">
+                 <p class="card-text text-center"><span class="badge badge-primary mr-1">Cooming Soon</span></p>
+                 <h4 class="card-title text-center">Serment</h4>
+                 <p class="card-text text-justify">Integer in sodales turpis. Nam feugiat erat risus, quis commodo elit ullamcorper vitae. Quisque magna ligula, maximus quis lobortis  amet volutpat...</p>
+                 <p class="text-secondary">21 Avril</p>
+                 <a href="#" class="btn btn-secondary">Go somewhere</a>
+               </div>
+             </div>
+           </div>
+
+           <div class="col-12 col-sm-6 py-3">
+             <div class="card">
+               <div class="card-body">
+                 <p class="card-text text-center"><span class="badge badge-danger mr-1">New</span></p>
+                 <h4 class="card-title text-center">Sang</h4>
+                 <p class="card-text text-justify">Etiam eget justo eu leo sodales blandit. Quisque tempus est id justo condimentum convallis. Phasellus volutpat orci. Suspendisse fringilla nullam...</p>
+                 <p class="text-secondary">21 Avril</p>
+                 <a href="#" class="btn btn-secondary">Go somewhere</a>
+               </div>
+             </div>
+
+           </div>
+         </div>
+       </div>
+     </div>
+
+     <div class="row no-gutters justify-content-center bg-primary text-white">
+      <div class="col-12 col-md-10 col-lg-8 col-xl-6 py-5">
+        <h4 class="text-center mb-5">Jean Forteroche</h4>
+        <div class="row justify-content-center">
+          <div class="col-11 col-md-4 py-2">
+            <img class="img-fluid" src="Photos/ecriture.jpg" alt="auteur">
+          </div>
+          <div class="col-11 col-md-6 py-2">
+            <p class="text-justify">
+              Nam convallis hendrerit lacus, vitae aliquet orci finibus sed. Donec gravida lectus sit amet rutrum varius. Pellentesque porta nunc sit amet ligula ultricies cursus. Etiam consequat ipsum congue, tincidunt quam laoreet, sodales orci. Duis eget efficitur lectus. In hac habitasse platea dictumst. Duis finibus, justo vel iaculis pellentesque, risus risus malesuada ligula, sed maximus urna nisi sed urna.
+            </p>
           </div>
         </div>
       </div>
+    </div>
 
       <!-- footer -->
       <footer class="row justify-content-center text-light bg-dark">
@@ -101,7 +118,6 @@
           <p>Site créer par Alvarez Romain. <a href="#" class="badge badge-primary">Mentions légales</a></p>
         </div>
       </footer>
-    </div>
 
 
     <!-- Optional JavaScript -->
